--- a/index.html
+++ b/index.html
@@ -4,25 +4,38 @@
 
     <title> Excursion </title>
 
-    <link href="style.css" type="text/css" rel="stylesheet">
+    <link href="resources/style.css" type="text/css" rel="stylesheet">
 
   </head>
   <body>
 
     <h1> Discover hidden places in the world around you </h1>
 
-      <h2> Download Excursion </h2>
+      <h2><a href="./index.html"> Download Excursion (Coming Soon!)</a></h2>
 
-    <h1> Your personal travel guide </h1>
+  <p><video src="resources/excursion.mp4" width "320" Height "220" controls>video not supported</p>
 
-      <p> Excursion remembers places you like, and recommends new points of
+    <div>
+
+    <h1 class=guide> Your personal travel guide </h1>
+
+      <p class=remembers> Excursion remembers places you like, and recommends new points of
         interest around you. </p>
-        <img src=https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg alt "tent">
-        <img src=https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png alt "cellphone">
+
+      <p><img src=https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg alt "tent"></p>
+
+      <p><img src=https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png alt "cellphone"></p>
+
+    </div>
 
     <h1> Coming soon for iPhone and Android </h1>
 
-      <h2> Download Excursion </h2>
+    <div>
+
+      <h2><a href="./index.html"> Download Excursion (Coming Soon!)</a></h2>
+
+        <p class=excursion> Excursion </p>
+      </div>
 
 
 
